--- a/public/css/sellpage-styles.css
+++ b/public/css/sellpage-styles.css
@@ -12,7 +12,7 @@
   }
 
 input[type="text"], textarea {
-  background-color: red;
+  background-color: white;
   padding: 0.5rem 1.25rem;
   font-size: 0.9rem;
   font-weight: 500;
