--- a/public/css/sellpage-styles.css
+++ b/public/css/sellpage-styles.css
@@ -15,7 +15,7 @@
     content: "*";
     color: red;
     /* font-size: 0.9rem; */
-    margin-left: 0.2em; /* Adjust as needed */
+    /* margin-left: 0.2em; Adjust as needed */
     margin-bottom: 0.2em; /* Adjust as needed */
 
 }
