--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -271,6 +271,17 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+#register-and-forgot-pw {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+#forgot-pw {
+    text-decoration: none;
+}
 
 
 footer {
@@ -613,11 +624,6 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-  }
-
-  .auth-alt {
-    width: 100%;
-    text-align: center;
   }
 
 .checkbox-horizontal-flex {
