--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,8 +52,8 @@ body {
     /* font-family: "Pangolin", system-ui, sans-serif; */
     /* font-family: roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; */
     /* font-family: 'Open Sans', sans-serif; */
-    /* font-family: Poppins,sans-serif; */
-    font-family: Jost,sans-serif;
+    font-family: Poppins,sans-serif;
+    /* font-family: Jost,sans-serif; */
     letter-spacing: 0.1px;
     word-spacing: 1px;
     line-height: 1.5;
@@ -239,6 +239,10 @@ input[type="submit"]:hover, input[type="button"]:hover{
     transition: 5ms;
 }
 
+input[type="text"]:focus, textarea:focus {
+    outline: none !important;
+}
+
 .img-preview {
     height: 200px;
     width: auto;
@@ -269,6 +273,10 @@ main {
     margin: 3rem auto;
     padding: 3rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+#pfp-upload {
+    width: 100%;
 }
 
 #register-and-forgot-pw {
@@ -455,6 +463,7 @@ label {
     flex-wrap: wrap;
     margin: auto;
 }
+
 /* .accordion-body {
     text-align: left;
 }
@@ -569,6 +578,8 @@ h3 {
     margin: unset;
     padding-left: 1rem;
     padding-right: 1rem;
+    width: 100%;
+    overflow-x: auto;
 }
 
 /* Standard Checkbox */
